--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
         "redux-devtools": "^3.4.1"
     },
     "devDependencies": {
+        "@types/jest": "^23.3.2",
         "awesome-typescript-loader": "^5.2.1",
         "husky": "^0.14.3",
+        "jest": "^23.6.0",
         "prettier": "1.14.2",
         "pretty-quick": "^1.6.0",
         "source-map-loader": "^0.2.4",
+        "ts-jest": "^23.1.4",
         "tslint": "^5.11.0",
         "tslint-config-prettier": "^1.15.0",
         "typescript": "^3.0.3",
